--- a/orders/templates/index.html
+++ b/orders/templates/index.html
@@ -19,89 +19,38 @@
                             <a href="#salad">Salad</a> |
                             <a href="#dinner">Dinner Platters</a>
                         </div>
+                        {% for category_with_sizes in categories_with_sizes %}
                         <table width="100%" class="foodmenu">
                             <tbody>
                                 <tr>
-                                    <th colspan="3"><a name="regular_pizza">Regular Pizza</a></th>
+                                    <th colspan="3"><a name="regular_pizza">{{ category_with_sizes.category.name }}</a>
+                                    </th>
                                 </tr>
                                 <tr>
                                     <td></td>
-                                    <td>Small</td>
-                                    <td>Large</td>
+                                    {% for size in category_with_sizes.sizes %}
+                                    <td>{{ size.name }}</td>
+                                    {% endfor %}
                                 </tr>
+                                {% for product in category_with_sizes.category.product_set.all %}
+                                {% for variant in product.productvariant_set.all %}
                                 <tr>
-                                    <td width="50%">Cheese</td>
-                                    <td width="25%">13.95</td>
-                                    <td width="25">19.45</td>
+                                    <td aria-valuemax="{{ variant.number_of_toppings }}">{{ product.name }}</td>
+                                    {% for size in category_with_sizes.sizes %}
+                                    <td>
+                                        {% for price_info in variant.productvariantprice_set.all %}
+                                        {% if price_info.size.id == size.id %}
+                                        <button>{{ price_info.price }}</button>
+                                        {% endif %}
+                                        {% endfor %}
+                                    </td>
+                                    {% endfor %}
                                 </tr>
-                                <tr>
-                                    <td width="50%">1 topping</td>
-                                    <td width="25%">15.95</td>
-                                    <td width="25">21.45</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">2 toppings</td>
-                                    <td width="25%">17.95</td>
-                                    <td width="25">23.45</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">3 toppings</td>
-                                    <td width="25%">19.95</td>
-                                    <td width="25">25.45</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Special</td>
-                                    <td width="25%">21.95</td>
-                                    <td width="25">27.45</td>
-                                </tr>
+                                {% endfor %}
+                                {% endfor %}
                             </tbody>
                         </table>
-                        <div class="internalmenunav">
-                            <a href="#regular_pizza">Regular Pizza</a> |
-                            <a href="#sicilian_pizza">Sicilian Pizza</a> |
-                            <a href="#toppings">Toppings</a> |
-                            <a href="#subs">Subs</a> |
-                            <a href="#pasta">Pasta</a> |
-                            <a href="#salad">Salad</a> |
-                            <a href="#dinner">Dinner Platters</a>
-                        </div>
-                        <table width="100%" class="foodmenu">
-                            <tbody>
-                                <tr>
-                                    <th colspan="3"><a name="sicilian_pizza">Sicilian Pizza</a></th>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>Small</td>
-                                    <td>Large</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Cheese</td>
-                                    <td width="25%">25.75</td>
-                                    <td width="25">40.75</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">1 item</td>
-                                    <td width="25%">28.75</td>
-                                    <td width="25">43.75</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">2 items</td>
-                                    <td width="25%">31.75</td>
-                                    <td width="25">46.75</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">3 items</td>
-                                    <td width="25%">34.75</td>
-                                    <td width="25">49.75</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Special</td>
-                                    <td width="25%">37.75</td>
-                                    <td width="25">52.75</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        {% endfor %}
                         <div class="internalmenunav">
                             <a href="#regular_pizza">Regular Pizza</a> |
                             <a href="#sicilian_pizza">Sicilian Pizza</a> |
@@ -116,66 +65,11 @@
                                 <tr>
                                     <th colspan="2"><a name="toppings">Toppings</a></th>
                                 </tr>
+                                {% for Toping in Topings %}
                                 <tr>
-                                    <td width="50%">Pepperoni</td>
+                                    <td width="50%">{{ Toping.name }}</td>
                                 </tr>
-                                <tr>
-                                    <td width="50%">Sausage</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Mushrooms</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Onions</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Ham</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Canadian Bacon</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Pineapple</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Eggplant</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Tomato &amp; Basil</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Green Peppers</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Hamburger</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Spinach</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Artichoke</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Buffalo Chicken</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Barbecue Chicken</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Anchovies</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Black Olives</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Jalapenos</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Fresh Garlic</td>
-                                </tr>
-                                <tr>
-                                    <td width="50%">Zucchini</td>
-                                </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
                         <div class="internalmenunav">
