--- a/orders/templates/layout.html
+++ b/orders/templates/layout.html
@@ -2,14 +2,20 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title%}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{% block title%}{% endblock %}</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	{% block customCSS %}
+	{% endblock %}
+	<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
+
 <body>
-    <div id="header">
+	<div id="header">
 		<table width="100%" cellspacing="0" cellpadding="0">
 			<tbody>
 				<tr>
@@ -28,14 +34,28 @@
 	</div>
 	<div id="menu">
 		<ul>
-			<li><a href="index.html" id="">Home</a></li>
-			<li><a href="menu.html" id="youarehere">Menu</a></li>
-			<li><a href="directions.html" id="">Directions</a></li>
-			<li><a href="hours.html" id="">Hours</a></li>
-			<li><a href="sicilian_vs_regular.html" id="">Sicilian vs. Regular</a></li>
-			<li><a href="contact.html" id="">Contact Us</a></li>
+			<li><a class="not-active" href="index.html" id="">Home</a></li>
+			<li><a class="not-active href=" menu.html" id="youarehere">Menu</a></li>
+			<li><a class="not-active" href="directions.html" id="">Directions</a></li>
+			<li><a class="not-active" href="hours.html" id="">Hours</a></li>
+			<li><a class="not-active" href="sicilian_vs_regular.html" id="">Sicilian vs. Regular</a></li>
+			<li><a class="not-active" href="contact.html" id="">Contact Us</a></li>
+			{% if request.user.is_authenticated %}
+			<li class="dropdown">
+				<a class="dropdown-toggle" href="#" data-bs-toggle="dropdown">Account</a>
+				<div class="dropdown-menu">
+				  <a class="dropdown-item" href="#">{{ request.user.get_full_name }}</a>
+				  <a class="dropdown-item" href="#">My orders</a>
+				  <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+				</div>
+			  </li>
+			{% endif %}
 		</ul>
 	</div>
-    {% block body %}{% endblock %}
+	{% block body %}{% endblock %}
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
