--- a/orders/templates/layout.html
+++ b/orders/templates/layout.html
@@ -21,7 +21,7 @@
 				<tr>
 					<td class="green" width="20%">&nbsp;</td>
 					<td width="60%">
-						<img height="140" src="images/pinocchio_72.gif" alt="Pinocchio" />
+						<img height="140" src="{% static 'images/pinocchio_72.gif' %}" alt="Pinocchio" />
 						<h1>Pinocchio's Pizza &amp; Subs</h1>
 						<h2>74 Winthrop Street<br />
 							Harvard Square<br />
