--- a/orders/templates/index.html
+++ b/orders/templates/index.html
@@ -40,7 +40,8 @@
                                     <td>
                                         {% for price_info in variant.productvariantprice_set.all %}
                                         {% if price_info.size.id == size.id %}
-                                        <button>{{ price_info.price }}</button>
+                                        <button onclick="addProductToCart({{ price_info.id }})">$
+                                            {{price_info.price}}</button>
                                         {% endif %}
                                         {% endfor %}
                                     </td>
@@ -72,251 +73,133 @@
                                 {% endfor %}
                             </tbody>
                         </table>
-                        <div class="internalmenunav">
-                            <a href="#regular_pizza">Regular Pizza</a> |
-                            <a href="#sicilian_pizza">Sicilian Pizza</a> |
-                            <a href="#toppings">Toppings</a> |
-                            <a href="#subs">Subs</a> |
-                            <a href="#pasta">Pasta</a> |
-                            <a href="#salad">Salad</a> |
-                            <a href="#dinner">Dinner Platters</a>
-                        </div>
-                        <table width="100%" class="foodmenu">
-                            <tbody>
-                                <tr>
-                                    <th colspan="3"><a name="subs">Subs</a></th>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td>Small</td>
-                                    <td>Large</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Cheese</td>
-                                    <td width="25%">8.95</td>
-                                    <td width="25">10.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Italian</td>
-                                    <td width="25%">8.95</td>
-                                    <td width="25">10.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Ham + Cheese</td>
-                                    <td width="25%">8.95</td>
-                                    <td width="25">10.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Meatball</td>
-                                    <td width="25%">8.95</td>
-                                    <td width="25">10.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Tuna</td>
-                                    <td width="25%">8.95</td>
-                                    <td width="25">10.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Turkey</td>
-                                    <td width="25%">9.95</td>
-                                    <td width="25">11.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Chicken Parmigiana</td>
-                                    <td width="25%">9.95</td>
-                                    <td width="25">11.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Eggplant Parmigiana</td>
-                                    <td width="25%">8.95</td>
-                                    <td width="25">10.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Steak</td>
-                                    <td width="25%">9.00</td>
-                                    <td width="25">11.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Steak + Cheese</td>
-                                    <td width="25%">9.95</td>
-                                    <td width="25">11.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">+ Mushrooms</td>
-                                    <td width="25%">+1.00</td>
-                                    <td width="25">+1.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">+ Green Peppers</td>
-                                    <td width="25%">+1.00</td>
-                                    <td width="25">+1.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">+ Onions</td>
-                                    <td width="25%">+1.00</td>
-                                    <td width="25">+1.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Sausage, Peppers & Onions</td>
-                                    <td width="25%"></td>
-                                    <td width="25">11.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Hamburger</td>
-                                    <td width="25%">8.50</td>
-                                    <td width="25">10.50</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Cheeseburger</td>
-                                    <td width="25%">9.50</td>
-                                    <td width="25">11.50</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Fried Chicken</td>
-                                    <td width="25%">9.95</td>
-                                    <td width="25">11.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Veggie</td>
-                                    <td width="25%">9.95</td>
-                                    <td width="25">11.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Extra Cheese on any sub</td>
-                                    <td width="25%">+1.00</td>
-                                    <td width="25">+1.00</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="internalmenunav">
-                            <a href="#regular_pizza">Regular Pizza</a> |
-                            <a href="#sicilian_pizza">Sicilian Pizza</a> |
-                            <a href="#toppings">Toppings</a> |
-                            <a href="#subs">Subs</a> |
-                            <a href="#pasta">Pasta</a> |
-                            <a href="#salad">Salad</a> |
-                            <a href="#dinner">Dinner Platters</a>
-                        </div>
-                        <table width="100%" class="foodmenu">
-                            <tbody>
-                                <tr>
-                                    <th colspan="3"><a name="pasta">Pasta</a></th>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td> </td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Baked Ziti w/Mozzarella</td>
-                                    <td width="25%">9.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Baked Ziti w/Meatballs</td>
-                                    <td width="25%">12.50</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Baked Ziti w/Chicken</td>
-                                    <td width="25%">13.75</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="internalmenunav">
-                            <a href="#regular_pizza">Regular Pizza</a> |
-                            <a href="#sicilian_pizza">Sicilian Pizza</a> |
-                            <a href="#toppings">Toppings</a> |
-                            <a href="#subs">Subs</a> |
-                            <a href="#pasta">Pasta</a> |
-                            <a href="#salad">Salad</a> |
-                            <a href="#dinner">Dinner Platters</a>
-                        </div>
-                        <table width="100%" class="foodmenu">
-                            <tbody>
-                                <tr>
-                                    <th colspan="3"><a name="salad">Salads</a></th>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Garden Salad</td>
-                                    <td width="25%">8.95</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Greek Salad</td>
-                                    <td width="25%">10.50</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Antipasto or Tuna</td>
-                                    <td width="25%">12.25</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Salad w/Chicken (breaded)</td>
-                                    <td width="25%">13.95</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="internalmenunav">
-                            <a href="#regular_pizza">Regular Pizza</a> |
-                            <a href="#sicilian_pizza">Sicilian Pizza</a> |
-                            <a href="#toppings">Toppings</a> |
-                            <a href="#subs">Subs</a> |
-                            <a href="#pasta">Pasta</a> |
-                            <a href="#salad">Salad</a> |
-                            <a href="#dinner">Dinner Platters</a>
-                        </div>
-                        <table width="100%" class="foodmenu">
-                            <tbody>
-                                <tr>
-                                    <th colspan="3"><a name="dinner">Dinner Platters</a></th>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Garden Salad</td>
-                                    <td width="25%">Small $40.00 Large $65.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Greek Salad</td>
-                                    <td width="25%">Small $50.00 Large $75.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Antipasto</td>
-                                    <td width="25%">Small $50.00 Large $75.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Baked Ziti</td>
-                                    <td width="25%">Small $40.00 Large $65.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Meatball Parm</td>
-                                    <td width="25%">Small $50.00 Large $75.00</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;" width="50%">Chicken Parm</td>
-                                    <td width="25%">Small $55.00 Large $85.00</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <div class="internalmenunav">
-                            <a href="#regular_pizza">Regular Pizza</a> |
-                            <a href="#sicilian_pizza">Sicilian Pizza</a> |
-                            <a href="#toppings">Toppings</a> |
-                            <a href="#subs">Subs</a> |
-                            <a href="#pasta">Pasta</a> |
-                            <a href="#salad">Salad</a> |
-                            <a href="#dinner">Dinner Platters</a>
-                        </div>
                     </div>
                 </td>
 
-                <td>
-                    ESTO ES OTRA PRUEBA CHAVALES
+
+
+                <td id="cart" width="50%">
+                    <h2>Cart</h2>
+                    <form action="{% url 'deleteCart' %}" method="POST">
+                        {% csrf_token %}
+                        <button type="submit">Delete all items</button>
+                    </form>
+                    {% for response_data in request.session.response_data_list %}
+                    <div class="callout text-start">
+                        <div>
+                            <h4>Name: {{ response_data.Category }}</h4>
+                        </div>
+                        <div>
+                            <p>Type: {{ response_data.productName }}</p>
+                        </div>
+                        <div>
+                            <p>Size: {{ response_data.size }}</p>
+                        </div>
+                        <div>
+                            <p>price: $ {{ response_data.price }}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    {% if request.session.response_data_list %}
+                    <form action="{% url 'createOrder' %}" method="POST">
+                        {% csrf_token %}
+                        <button type="submit">Create Order</button>
+                    </form>
+
+                    {% endif %}
+
                 </td>
             </tr>
         </tbody>
     </table>
 </div>
+<script>
+    //var cart = document.getElementById("cart");
+    //var name = document.createElement("h4");
+    //var size = document.createElement("p");
+    //var price = document.createElement("p");
+    //name.innerHTML = "Name: " + event.target.parentElement.parentElement.parentElement.children[0].innerHTML;
+    //size.innerHTML = "Type: " + event.target.parentElement.parentElement.children[0].innerHTML;
+    //price.innerHTML = "Price: " + event.target.innerHTML;
+    //cart.appendChild(name);
+    //cart.appendChild(size);
+    //cart.appendChild(price);
+    function addProductToCart(product_id, idProduct) {
+        fetch('/addCart/' + product_id + '/', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                'id_producto': idProduct
+            })
+        })
+            .then(response => response.json())
+            .then(data => {
+
+                // Crear el formulario solo si no existe
+                if (!document.getElementById("order-form")) {
+                    // Crear el formulario
+                    var form = document.createElement("form");
+                    form.id = "order-form";
+                    form.action = "{% url 'createOrder' %}";
+                    form.method = "POST";
+
+                    // Agregar el token CSRF
+                    var csrf_token = document.createElement("input");
+                    csrf_token.type = "hidden";
+                    csrf_token.name = "csrfmiddlewaretoken";
+                    csrf_token.value = "{{ csrf_token }}";
+                    form.appendChild(csrf_token);
+
+                    // Crear el botón de envío
+                    var submit_button = document.createElement("button");
+                    submit_button.type = "submit";
+                    submit_button.textContent = "Create Order";
+                    form.appendChild(submit_button);
+
+                    // Agregar el formulario al elemento "cart"
+                    var cart = document.getElementById("cart");
+                    cart.appendChild(form);
+
+                    // Mover el formulario al final
+                    cart.appendChild(form);
+                };
+
+
+                // Obtener el elemento con el id "cart"
+                var cart = document.getElementById("cart");
+
+                // Crear el elemento div
+                var div = document.createElement("div");
+                div.className = "callout text-start";
+
+                // Crear los elementos internos del div
+                var h4 = document.createElement("h4");
+                h4.textContent = "Name: " + data.Category;
+                div.appendChild(h4);
+
+                var p1 = document.createElement("p");
+                p1.textContent = "Type: " + data.productName;
+                div.appendChild(p1);
+
+                var p2 = document.createElement("p");
+                p2.textContent = "Size: " + data.size;
+                div.appendChild(p2);
+
+                var p3 = document.createElement("p");
+                p3.textContent = "Price: $" + data.price;
+                div.appendChild(p3);
+
+
+
+                // Agregar el div al elemento "cart"
+                cart.appendChild(div);
+            })
+            .catch(error => console.error(error));
+
+        console.log(idProduct);
+    }
+
+</script>
 {% endblock %}
